// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateHmrProxy client-named-export 1`] = `
"import {
    client
} from '/client-named-export.mjs?mtime=0';
import { client0 } from \\"/@hmr\\";
let client1 = client;

export {
    client1 as client
};

client0.registerModule(\\"/client-named-export.mjs\\", (updated) => {
    client1 = updated.client;
});"
`;

exports[`generateHmrProxy default-export 1`] = `
"import {
    default as _default
} from '/default-export.mjs?mtime=0';
import { client } from \\"/@hmr\\";
let _default0 = _default;

export {
    _default0 as default
};

client.registerModule(\\"/default-export.mjs\\", (updated) => {
    _default0 = updated.default;
});"
`;

exports[`generateHmrProxy default-export-conflict 1`] = `
"import {
    default as _default,
    _default as _default0
} from '/default-export-conflict.mjs?mtime=0';
import { client } from \\"/@hmr\\";
let _default1 = _default;
let _default00 = _default0;

export {
    _default1 as default,
    _default00 as _default
};

client.registerModule(\\"/default-export-conflict.mjs\\", (updated) => {
    _default1 = updated.default;
    _default00 = updated._default;
});"
`;

exports[`generateHmrProxy multiple-named-exports 1`] = `
"import {
    a,
    b,
    c
} from '/multiple-named-exports.mjs?mtime=0';
import { client } from \\"/@hmr\\";
let a0 = a;
let b0 = b;
let c0 = c;

export {
    a0 as a,
    b0 as b,
    c0 as c
};

client.registerModule(\\"/multiple-named-exports.mjs\\", (updated) => {
    a0 = updated.a;
    b0 = updated.b;
    c0 = updated.c;
});"
`;

exports[`generateHmrProxy named-class-export.js 1`] = `
"import {
    C
} from '/named-class-export.js?mtime=0';
import { client } from \\"/@hmr\\";
let C0 = C;

export {
    C0 as C
};

client.registerModule(\\"/named-class-export.js\\", (updated) => {
    C0 = updated.C;
});"
`;

exports[`generateHmrProxy named-conflicts 1`] = `
"import {
    a,
    a0,
    a1,
    a2
} from '/named-conflicts.mjs?mtime=0';
import { client } from \\"/@hmr\\";
let a3 = a;
let a00 = a0;
let a10 = a1;
let a20 = a2;

export {
    a3 as a,
    a00 as a0,
    a10 as a1,
    a20 as a2
};

client.registerModule(\\"/named-conflicts.mjs\\", (updated) => {
    a3 = updated.a;
    a00 = updated.a0;
    a10 = updated.a1;
    a20 = updated.a2;
});"
`;

exports[`generateHmrProxy named-export-alias 1`] = `
"import {
    b
} from '/named-export-alias.mjs?mtime=0';
import { client } from \\"/@hmr\\";
let b0 = b;

export {
    b0 as b
};

client.registerModule(\\"/named-export-alias.mjs\\", (updated) => {
    b0 = updated.b;
});"
`;

exports[`generateHmrProxy named-function-declaration 1`] = `
"import {
    f
} from '/named-function-declaration.mjs?mtime=0';
import { client } from \\"/@hmr\\";
let f0 = f;

export {
    f0 as f
};

client.registerModule(\\"/named-function-declaration.mjs\\", (updated) => {
    f0 = updated.f;
});"
`;

exports[`generateHmrProxy named-multiple-var-declarations 1`] = `
"import {
    a,
    b,
    c
} from '/named-multiple-var-declarations.mjs?mtime=0';
import { client } from \\"/@hmr\\";
let a0 = a;
let b0 = b;
let c0 = c;

export {
    a0 as a,
    b0 as b,
    c0 as c
};

client.registerModule(\\"/named-multiple-var-declarations.mjs\\", (updated) => {
    a0 = updated.a;
    b0 = updated.b;
    c0 = updated.c;
});"
`;

exports[`generateHmrProxy named-single-export 1`] = `
"import {
    a
} from '/named-single-export.mjs?mtime=0';
import { client } from \\"/@hmr\\";
let a0 = a;

export {
    a0 as a
};

client.registerModule(\\"/named-single-export.mjs\\", (updated) => {
    a0 = updated.a;
});"
`;

exports[`generateHmrProxy named-single-var-declaration 1`] = `
"import {
    a
} from '/named-single-var-declaration.mjs?mtime=0';
import { client } from \\"/@hmr\\";
let a0 = a;

export {
    a0 as a
};

client.registerModule(\\"/named-single-var-declaration.mjs\\", (updated) => {
    a0 = updated.a;
});"
`;

exports[`generateHmrProxy no-exports 1`] = `
"const a = 1;
"
`;
